<resources>
    <string name="app_name">iitrtimetable</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="enrolment_number">Enrolment Number</string>
    <string name="activity2_name">Second Activity</string>
    <string name="textview">TextView</string>
    <string name="show_my_timetable">show my timetable</string>
    <string name="user_details">User Details</string>
    <string name="timetable">Timetable</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="name_gautam_bafna">Name: Gautam Bafna</string>
    <string name="courses">Courses:</string>
    <string name="nso_ncc_nss_nss">NSO/NCC/NSS: NSS</string>
    <string name="groupmember">Groupmember:</string>
    <string name="groupfollowed_mdg_sds">GroupFollowed: MDG, SDS</string>
</resources>
