<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Timetable">

    <TextView
        android:id="@+id/Timetable"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/timetable"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/Monday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monday"
        android:onClick="monday"/>

    <Button
        android:id="@+id/Tuesday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/tuesday" />

    <Button
        android:id="@+id/Wednesday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/wednesday" />

    <Button
        android:id="@+id/Thursday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/thursday" />

    <Button
        android:id="@+id/Friday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/friday" />

    <Button
        android:id="@+id/Saturday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/saturday" />

    <Button
        android:id="@+id/Sunday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/sunday" />
</LinearLayout>