<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/user_details"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/name_gautam_bafna" />

    <TextView
        android:id="@+id/Courses"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/courses" />

    <TextView
        android:id="@+id/N"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/nso_ncc_nss_nss" />

    <TextView
        android:id="@+id/Groupmember"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/groupmember" />

    <TextView
        android:id="@+id/GroupFollowed"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/groupfollowed_mdg_sds" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="showTimetable"
        android:text="@string/show_my_timetable" />

</LinearLayout>